[package]
name = "verkle-block-sample"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
verkle-trie = { path = "../rust-verkle/verkle-trie" }
rlp = "^0.5.1"
ark-serialize = { version = "0.3.0", default-features = false }
hex = "0.4.3"

[dev-dependencies]
bytebuffer = "0.2.1"
